# uv-ffi

./: .gitignore  .gitmodules  README.md  pyproject.toml  setup.py
src/: build_uv.py
src/uv_ffi/: __init__.py
src/uv_ffi/handles/: handle.py  timer.py
